--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
         "pusher-js": "^8.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "sass": "^1.56.1",
+        "sass": "^1.85.0",
         "tailwindcss": "^3.4.13",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "classnames": "^2.5.1",
+        "lucide-react": "^0.475.0",
+        "vite-plugin-sass-dts": "^1.3.30",
+        "zustand": "^5.0.3"
     }
 }
